--- a/.env
+++ b/.env
@@ -42,3 +42,6 @@ DATABASE_URL="mysql://root:root@database:3306/game_of_thrones?serverVersion=mari
 ###> symfony/mailer ###
 # MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+# ! to update on mailtrap.io and reference in .env.local
+MAILER_DSN=smtp://usr:pass@smtp.mailtrap.io:2525?encryption=tls&auth_mode=login
